--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -5,14 +5,14 @@
   <title>Vanilla JS Counter</title>
 </head>
 <body>
-
-  <div class="counter-container">
-    <h1>Counter</h1>
-    <div id="display" class="display">022</div>
-    <div class="buttons">
-      <button id="decrement">-</button>
-      <button id="increment">+</button>
-    </div>
+  <div class="todo-box">
+    <h1> To-Do List</h1>
+      <form id="todo-form">
+        <label for="name">Name :</label>
+        <input type="text" id="todo-input">
+        <button type="submit">Add</button>
+      </form>
+      <ul class="todo-list" id="todo-list"></ul>
   </div>
 
   <script type="module" src="/src/main.js"></script>
